[DW-921] Fix National Stats image overlapping title

--- a/repository-data/webfiles/src/main/resources/site/scss/components/_article-header.scss
+++ b/repository-data/webfiles/src/main/resources/site/scss/components/_article-header.scss
@@ -83,7 +83,7 @@
 
 .article-header__stamp {
     position: absolute;
-    top: 0;
+    top: -20px;
     right: 0;
     margin-top: round($gutter * 0.5);
 
